--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 22 13:36:35 ICT 2020
-sdk.dir=C\:\\Users\\hardi\\AppData\\Local\\Android\\Sdk
+#Fri Feb 12 17:27:30 ICT 2021
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
