--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 12 17:27:30 ICT 2021
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Wed Feb 17 17:00:38 ICT 2021
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
