--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,6 @@
-#Thu Oct 22 15:26:15 ICT 2020
-package=com.example.testkotlin.Adapter
-import=andr
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+#Fri Mar 19 14:28:24 ICT 2021
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
