--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.CheckEmailActivity"></activity>
+        <activity android:name=".Activity.CheckEmailActivity" />
         <activity
             android:name=".Activity.ConfirmOrderActivity"
             android:screenOrientation="portrait"
@@ -34,7 +34,7 @@
         <activity
             android:name=".Activity.ForgotPasswordActivity"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
+            tools:ignore="DuplicateActivity,LockedOrientationActivity" />
         <activity
             android:name=".Activity.SignInActivity"
             android:screenOrientation="portrait"
