--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 23 10:28:15 ICT 2021
-sdk.dir=C\:\\Users\\Youga\\AppData\\Local\\Android\\Sdk
+#Wed Mar 31 09:46:49 ICT 2021
+sdk.dir=C\:\\Users\\abs-p\\AppData\\Local\\Android\\Sdk
