--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.CheckEmailActivity" />
         <activity
+            android:name=".Activity.TermConditionActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".Activity.PrivacyPolicyActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".Activity.ConfirmOrderActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
