--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 31 15:05:54 ICT 2021
-sdk.dir=C\:\\Users\\abs-p\\AppData\\Local\\Android\\Sdk
+#Wed Mar 31 15:44:28 ICT 2021
+sdk.dir=C\:\\Users\\Youga\\AppData\\Local\\Android\\Sdk
